--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "express": "^4.18.1",
     "mongodb": "^4.5.0",
     "mongoose": "^6.3.1"
+  },
+  "engines": {
+    "node": "v16.14.2"
   }
 }
