--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
+    "connect-mongodb-session": "^3.1.1",
     "ejs": "^3.1.6",
     "express": "^4.18.1",
+    "express-session": "^1.17.3",
     "mongodb": "^4.5.0",
     "mongoose": "^6.3.1"
   },
