--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ejs": "^3.1.6",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
+    "method-override": "^3.0.0",
     "mongodb": "^4.5.0",
     "mongoose": "^6.3.1"
   },
