--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^7.1.1"
+    "passport-local-mongoose": "^7.1.1",
+    "swagger-ui-express": "^4.4.0"
   },
   "engines": {
     "node": "v16.14.2"
